--- a/AppModel.json
+++ b/AppModel.json
@@ -7,61 +7,21 @@
   "isLocationRequested": true,
   "questions": [
     {
-      "title": "Category",
+      "title": "siteId",
       "type": "Text"
     },
     {
-      "title": "Title",
+      "title": "Reading",
       "type": "Text"
     },
     {
-      "title": "Description",
+      "title": "Comment",
       "type": "Text"
     },
     {
-      "title": "Lat",
-      "type": "Text"
-    },
-    {
-      "title": "lng",
-      "type": "Text"
-    },
-    {
-      "title": "loc",
-      "type": "Text"
-    },
-    {
-      "title": "phone",
-      "type": "Text"
-    },
-    {
-      "title": "customername",
-      "type": "Text"
-    },
-    {
-      "title": "approximatetime",
-      "type": "Text"
-    },
-    {
-      "title": "ticketstatus",
+      "title": "image",
       "type": "Text"
     }
-  ],
-  "properties":[
-    {
-      "name": "customername",
-      "type": "Text",
-      "value": "Name: Clare Mungai"
-    },
-    {
-      "name": "approximatewaiting",
-      "type": "Text",
-      "value": "Approximate Waiting: 30 minutes"
-    },
-    {
-      "name": "ticketstatus",
-      "type": "Text",
-      "value": "In Progress"
-    }
+   
   ]
 }
